--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="module" defer src="./task-1.js"></script>
-    <script type="module" defer src="./task-2.js"></script>
-    <script type="module" defer src="./task-3.js"></script>
+    <script type="module" defer src="./js/task-1.js"></script>
+    <script type="module" defer src="./js/task-2.js"></script>
+    <script type="module" defer src="./js/task-3.js"></script>
   </head>
   <body></body>
 </html>
